# sandbox-for-cryptocodes

./: .gitignore  Cargo.toml  README.md
sandbox/src/: cryptocode.rs  main.rs
src/: console_helper.rs  main.rs
src/algorithms/: algorithms_traits.rs  diffie_hellman.rs  elgamal.rs  mod.rs  registry.rs  rsa_toy.rs
src/attack/: attack_trait.rs  factorization.rs  mod.rs
src/attack/diffie_hellman/: baby_step_big_step.rs  brute_force.rs  mod.rs
src/attack/elgamal/: brute_force.rs  mod.rs  pohlig_hellman.rs
src/attack/rsa/: factorization.rs  fermat_factorization.rs  mod.rs  small_exponent.rs
src/attack_report/: attack_report.rs  mod.rs
src/cryptocode/: cryptocode.rs  mod.rs  rsa_toy.rs
src/experiment/: experiment.rs
src/utils/: console_helper.rs  crypto.rs  file_manager.rs  mod.rs  threads.rs  utils.rs
