[package]
name = "sandbox"
version = "0.2.0"
edition = "2024"

[dependencies]
num-integer = "0.1.46"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-prime = { version = "0.4", default-features = true } # big-int включён по умолчанию
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
crossterm = "0.29.0"
